--- a/package.json
+++ b/package.json
@@ -450,7 +450,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles --testEnviroment=node --runInBand --coverage --forceExit",
     "start": "node server.js"
   },
   "author": "Igor Miranda",
